<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/sf_ui_display_normal"
        android:hint="@string/login_email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textHintColor"
        android:textColorLink="@color/textHintColor" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimary"
        android:fontFamily="@font/sf_ui_display_normal"
        android:textColorHint="@color/textHintColor"
        android:textColorLink="@color/textHintColor"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/login_forgot_password"
        android:textColor="@drawable/clickable_text" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/button_primary"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/login_button_overlay"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/button_primary_pressed"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/textColorInvert"
            android:textSize="20sp"
            android:visibility="invisible" />
        <Button
            android:id="@+id/login_button_overlay_overlay"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/button_primary"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:visibility="invisible" />
    </FrameLayout>
    <TextView
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sf_ui_display_normal"
        android:text="@string/no_account_text"
        android:textSize="15sp"
        android:textColor="@drawable/clickable_text" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="invisible" />


</LinearLayout>